--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
     <h1>My first ever website</h1>
-    <h3>Hello, I am Fatema.</h3>
-</body>
-</html>
+    <p>Hello, I am Fatema.</p>
+    <p>Felling happy now</p>
